# orangeMath

./: LICENSE  README.md
include/: orangeMath.h
src/: CMakeLists.txt  orangeMath.c
test/: CMakeLists.txt  main.cpp  test.bat
